# task-rider

./: .gitignore  .travis.yml  Makefile  README.md  app.spec  entitlements.plist  main.spec  mk-icns.sh  pyproject.toml  setup.py
app/: __init__.py  __main__.py
app/controllers/: __init__.py  add_task_controller.py  config_controller.py  display_tasks_controller.py  main_controller.py  manage_timer_controller.py  overlay_controller.py  refresh_screen_controller.py  reminders_controller.py  shortcut_controller.py  time_report_controller.py
app/data/: __init__.py  entities.py  lite_data_store.py  reminders_task_service.py
app/events/: signals.py
app/settings/: app_config.py  app_settings.py
app/themes/: theme_loader.py  theme_provider.py
app/views/: completed_task_item_widget.py  configuration_dialog.py  display_tasks_view.py  main_window.py  task_item_widget.py
app/widgets/: completed_task_item_widget.py  overlay_widget.py  task_item_widget.py
assets/: icon.icns
requirements/: base.txt  dev.txt
resources/: resources.qrc
resources/icons/: app.icns
resources/themes/: light.qss
resources/views/: CompletedTaskItemWidget.ui  ConfigurationDialog.ui  MainWindow.ui  TaskItemWidget.ui
