[project]
name = "task-rider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6",
    "darkdetect",
    "attrs",
    "cattrs",
    "pyremindkit@git+https://github.com/namuan/pyremindkit",
    "schedule",
    "pyobjc",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pyinstaller",
    "ruff",
]

[project.scripts]
task-rider = "app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]
